add_executable(hello_sort 
  hello_sort.cpp  
)

add_executable(hello_sort_stdio
  hello_sort_stdio.cpp  
)

add_executable(hello_world 
  hello_world.cpp  
)

add_executable(qsort qsort.cpp  )
add_executable(merge_sort merge_sort.cpp  )

add_executable(nth_element
  nth_element.cpp  
)

add_executable(sort_msd
  sort_msd.cpp
)

add_executable(2_3_sample_01
  2_3_sample_01.cpp
)

add_executable(stream_test stream_test.cpp)
add_executable(stdio_test stdio_test.cpp)
